# chinese-reader

./: CMakeLists.txt  README.md  customtextedit.cpp  customtextedit.h  edittermdialog.cpp  edittermdialog.h  edittermdialog.ui  exitdialog.cpp  exitdialog.ui  library.cpp  library.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  terms.cpp  terms.h  text.cpp  text.h  worddata.cpp  worddata.h  wordhighlighter.cpp  wordhighlighter.h
cppjieba/: Jieba.hpp
